--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'silkscreen';
-  src: url('../font/slkscr.ttf') format('truetype');
+  src: url('../assets/font/slkscr.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
