--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,58 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: #000;
 }
 canvas {
-  display: block;
+    display: block;
+}
+.modal {
+  text-align: center;
+}
+.modal-content {
+    background-color: #000;
+    color: #FFF;
+    /*font-family: "Press Start 2P";*/
+    font-size: 16pt;
+}
+.modal-header {
+  border-style: solid dotted none dotted;
+  border-radius: 5px 5px 0 0;
+  border-color: #00FF00;
+  border-width: 4px;
+}
+.modal-body {
+    border-style: solid dotted solid dotted;
+    border-radius: 0;
+    border-color: #00FF00;
+    border-width: 4px;
+}
+.modal-footer {
+    border-style: none dotted solid dotted;
+    border-radius: 0 0 5px 5px;
+    border-color: #00FF00;
+    border-width: 4px;
+  text-align: center;
+}
+button.btn.btn-default {
+    color: #0f0;
+    border-width: 3px;
+    border-color: #0f0;
+    font-family: "Press Start 2P";
+    font-size: 20px;
+    padding: 15px;
+    background-color: #000;
+  
+}
+input[type="text"] {
+    border-style: solid dotted solid dotted;
+    border-color: #00FF00;
+    border-radius: 5px;
+    font: 16px "Press Start 2P";
+    padding: 20px;
+    background-color: #000;
+    color: #fff;
+    margin: 15px;
 }
