--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,24 @@ canvas {
 .modal {
   text-align: center;
 }
+.modal p{
+  font-size: 10pt;
+}
+.modal-header .close {
+    color: #00FF00;
+    opacity: 0.5;
+}
+.modal-header .close:hover {
+    opacity: 1;
+}
+.modal .title {
+    font-size: 18pt;
+}
 .modal-content {
     background-color: #000;
     color: #FFF;
     /*font-family: "Press Start 2P";*/
-    font-size: 16pt;
+    font-size: 10pt;
 }
 .modal-header {
   border-style: solid dotted none dotted;
@@ -28,6 +41,8 @@ canvas {
     border-radius: 0;
     border-color: #00FF00;
     border-width: 4px;
+    padding: 0;
+    margin: 0;
 }
 .modal-footer {
     border-style: none dotted solid dotted;
@@ -41,8 +56,8 @@ button.btn.btn-default {
     border-width: 3px;
     border-color: #0f0;
     font-family: "Press Start 2P";
-    font-size: 20px;
-    padding: 15px;
+    font-size: 10pt;
+    padding: 10px;
     background-color: #000;
   
 }
@@ -50,9 +65,9 @@ input[type="text"] {
     border-style: solid dotted solid dotted;
     border-color: #00FF00;
     border-radius: 5px;
-    font: 16px "Press Start 2P";
-    padding: 20px;
+    font: 10pt "Press Start 2P";
+    padding: 10px;
     background-color: #000;
     color: #fff;
-    margin: 15px;
+    margin: 10px;
 }
